small style changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div id="welcome-message">oh hai! <strong>welcome back Dale</strong> (logout)</div>
             </div>
             <nav id="navigation">
-                <a href="#" title="#" class="btn primary">+ Add new idea</a>
+                <a href="#" title="#" class="btn primary">+ add new idea</a>
             </nav>
         </div>
         
